test/gpu/native/assertOnFailToGpuizeAttr.3.good
warning: The prototype GPU support implies --no-checks. This may impact debuggability. To suppress this warning, compile with --no-checks explicitly
assertOnFailToGpuizeAttr.chpl:36: error: Loop is marked with @assertGpuEligible but is not eligible for execution on a GPU
assertOnFailToGpuizeAttr.chpl:37: note: call has outer var access
